test/should-fail/vsgc2293base.f3
/**
 * @subtest vsgc2293.f3
 */

public class vsgc2293base {
    public      var zero:  Integer = 0;
    public-read var one:   Integer = 0;
    public-init var two:   Integer = 0;
    public      def three: Integer = 0;
                var four:  Integer = 0;
} 
